# juce-template

./: .gitignore  CMakeLists.txt  Readme.md
src/: Main.cpp
